Added print stylesheet, Removed unused image files

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
           <div class="formfield small">
             <label for="projectdate">Project date</label><input type="text" id="projectdate" title="Enter project date" autocomlete="off"/>
           </div>
-          
+          <div class="formfield medium">
+            <label for="loom">Loom</label><input type="text" id="loom"  />
+          </div>
           <div class="formfield medium">
             <label for="weavestructure">Weave structure</label><input type="text" id="weavestructure" title="What is the weave structure? ie tabby, twill"  />
           </div>
-          <div class="formfield large">
-            <label for="loom">Loom</label><input type="text" id="loom"  />
-          </div>
+          
           <div class="formfield medium">
             <label for="threadingpattern">Threading pattern</label>
             <input type="text" id="threadingpattern"  />
